Feat: 건물별 출입구 정보 반환 API 설계 완료